WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
142361
Fix the build when NEON_INTRINSICS is enabled
https://bugs.webkit.org/show_bug.cgi?id=142361
Summary
Fix the build when NEON_INTRINSICS is enabled
Sandy
Reported
2015-03-05 13:14:14 PST
Project does not compile when ARM_NEON_INTRINSICS is enabled. In file 'WebKit/Source/WebCore/platform/graphics/filters/FEGaussianBlur.cpp' variable 'isAlphaImage' is used as a function (i.e., isAlphaImage()) and in file 'WebKit/Source/WebCore/platform/graphics/cpu/arm/filters/FEBlendNEON.h' a ';' is missing.
Attachments
A patch that fixes the bug
(2.71 KB, patch)
2015-03-05 13:28 PST
,
Sandy
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sandy
Comment 1
2015-03-05 13:28:16 PST
Created
attachment 247990
[details]
A patch that fixes the bug
Csaba Osztrogonác
Comment 2
2015-03-05 15:09:55 PST
Just to note:
r177000
caused the isAlphaImage issue and
r170433
caused the return issue. Thanks for the fix. But it means that we didn't enable NEON on our ARM bots, but we should.
WebKit Commit Bot
Comment 3
2015-03-05 15:56:50 PST
Comment on
attachment 247990
[details]
A patch that fixes the bug Clearing flags on attachment: 247990 Committed
r181110
: <
http://trac.webkit.org/changeset/181110
>
WebKit Commit Bot
Comment 4
2015-03-05 15:56:55 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug