Fix the build when NEON_INTRINSICS is enabled https://bugs.webkit.org/show_bug.cgi?id=142361

Patch by Sandy Perez <sperez@indaba.es> on 2015-03-05
Reviewed by Csaba Osztrogonác.

* platform/graphics/cpu/arm/filters/FEBlendNEON.h:
(WebCore::FEBlend::platformApplySoftware):
* platform/graphics/filters/FEGaussianBlur.cpp:
(WebCore::standardBoxBlur):

Canonical link: https://commits.webkit.org/160398@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@181110 268f45cc-cd09-0410-ab3c-d52691b4dbfc